# InterPython_Workshop_Example

./: .pylintrc  README.md  lc-package.py  light-curve-analysis.ipynb  modeling-lightcurve_w_debugger.ipynb  modeling-lightcurve_w_tests.ipynb  modeling_lightcurve_w_debugger.ipynb  modeling_lightcurve_w_tests.ipynb  programming_methods.ipynb  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: README.md
lcanalyzer/: lightcurve.py  models.py  plots.py  survey.py  views.py
tests/: test_lightcurve.py  test_models.py
